--- a/index.html
+++ b/index.html
@@ -5,39 +5,29 @@
     <head>
         <meta charset="ASCII">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Adess</title>
-
-        <style>
-            <!-- For super cool and edgy dark mode ;) -->
-            body { background-color: #ffffff; color: #000000; }
-            a { color: #000000; }
-
-            footer { display: flex; justify-content: space-between; bottom: 0; }
-
-            @media (prefers-color-scheme: dark) {
-                body { background-color: #181818; color: #ffffff; }
-                a { color: #ffffff; }
-            }
-        </style>
+        <title>adess</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <blockquote>
             <center>
-                <h1><u>What is <i>Adess</i>?</u></h1>
+                <h1><u>What is <i>adess</i>?</u></h1>
             </center>
-            <p><i>Adess</i> stands for <i>artist directed engine sound synthetizer</i>. It's a <i>CLI</i> tool used for creating combustion engine sound synthetically,
-            meaning no simulations are involved! The main goal of <i>Adess</i> is to create a fast and reasonably convenient way to create audio for your film and animation needs.</p>
+            <p><i>adess</i> stands for <i>artist directed engine sound synthetizer</i>. It's a <i>CLI</i> tool used for creating combustion engine sound synthetically,
+            meaning no simulations are involved! The main goal of <i>adess</i> is to create a fast and reasonably convenient way to create audio for your film and animation needs.</p>
 
 
-            <h2><u>How can I install it?</u></h2>
-            <p>You will need to compile <i>Adess</i> yourself, thankfully, that's very easy!</p>
+            <center>
+                <h2><u>How can I install it?</u></h2>
+            </center>
+            <p>You will need to compile <i>adess</i> yourself, thankfully, that's very easy!</p>
 
 
             <h3><u>Prerequisites</u></h3>
-            <p>You will need these things in order to compile <i>Adess</i>:</p>
+            <p>You will need these things in order to compile <i>adess</i>:</p>
 
             <ul>
-                <li>A <i>Linux</i> or <i>MacOS</i> computer (You can use <i>Adess</i> on <i>Windows</i> through <i>WSL</i>)</li>
+                <li>A <i>Linux</i> or <i>MacOS</i> computer (You can use <i>adess</i> on <i>Windows</i> through <i>WSL</i>)</li>
                 <li>Basic knowlage of the terminal</li>
                 <li><i>CMAKE</i> and <i>make</i></li>
                 <li>Any (within reason) <i>C</i> compiler. <i>GCC</i> support is guaranteed!</li>
@@ -47,7 +37,7 @@
             <p>All of these tools (except maybe <i>CMAKE</i>) are usually preinstalled</p>
 
             <h3><u>Installation</u></h3>
-            <p>If you meet the prerequisites, you can follow this step by step guide to install <i>Adess</i>!</p>
+            <p>If you meet the prerequisites, you can follow this step by step guide to install <i>adess</i>!</p>
 
             <ol>
                 <li>Clone <i>adess</i> into a directory (the link is <a href="https://github.com/LeonKubota/adess.git">here</a>):</li>
@@ -63,12 +53,16 @@
                 <li>Compile with the <i>make</i> file:</li>
                 <div>&emsp;<code>make</code></div>
 
-                <li>Optional - add <i>Adess</i> to your path, the rest of the guide counts on it! (or alias <i>adess</i> to the absolute path of the executable, which effectively does the same, albeit in a much dumber way.)</li>
+                <li>Optional - add <i>adess</i> to your path, the rest of the guide counts on it! (or alias <i>adess</i> to the absolute path of the executable, which effectively does the same, albeit in a much dumber way.)</li>
             </ol>
 
-            <p><i>Adess</i> is now installed on your system! Congrats!</p>
+            <p><i>adess</i> is now installed on your system! Congrats!</p>
 
-            <h2><u>Guide</u></h3>
+            <center>
+                <h2><u>Guide</u></h3>
+            </center>
+
+            <p>In this part of this webpage, I will explain how you can actually use <i>adess</>.</p>
 
 
             <!-- mmm, feet :P -->
