--- a/privacy.html
+++ b/privacy.html
@@ -5,20 +5,8 @@
     <head>
         <meta charset="ASCII">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Adess - privacy</title>
-
-        <style>
-            <!-- For super cool and edgy dark mode ;) -->
-            body { background-color: #ffffff; color: #000000; }
-            a { color: #000000; }
-
-            footer { display: flex; justify-content: space-between; bottom: 0; }
-
-            @media (prefers-color-scheme: dark) {
-                body { background-color: #181818; color: #ffffff; }
-                a { color: #ffffff; }
-            }
-        </style>
+        <title>adess - privacy</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <blockquote>
@@ -26,7 +14,13 @@
                 <h1><u>Privacy policy</u></h1>
             </center>
 
-            <p>You are completely safe, I am unable to steal your data due to a lack of technical skill.</p>
+            <p style="font-size: 8pt"><i>Adess</i> doesn't have a privacy policy, because it doesn't need it! You are completely safe. This website doesn't have even have a database where I would keep all of the stolen data. Not because I am incapable of setting it up, but rather because I'm a good guy. ;). And even if I stole all of your data, what would I do with it? It's not like it's worth anything, it's just uselles bloat. I kind of want this text to be really long and look scary, so I'll keep writing more uselless information. Did you know that <i>adess</i> was first written in <i>Python</i>? And it was called <i>PESG</i> (for procedural engine sound generator). After making the basics in <i>Python</i> and finding out I don't really like <i>Python</i>, I decided to write it in <i>Java</i> instead. I even used <i>Java Swing</i> for the UI! But then I found out, I don't really like <i>Java</i> either. And I also didn't enjoy making UIs (you probably guessed that because of how this page looks). So, I rewrote it in <i>C</i>. And that is how <i>adess</i> was made. Or at least, so far. Maybe the next step is rewriting it in <i>assembly</i>? Or maybe I should make a hardware engine sound generator. It could mimic the sound of an engine through internal combustions that would repeat in cycles. Oh wait...</p>
+            <p style="font-size: 8pt">This is a very official privacy policy that everyone using <i>adess</i> will read. The next paragraph is totally not "<i>Lorem Ipsum</i>". Lorem ipsum is a dummy or placeholder text commonly used in graphic design, publishing, and web development. Its purpose is to permit a page layout to be designed, independently of the copy that will subsequently populate it, or to demonstrate various fonts of a typeface without meaningful text that could be distracting. Lorem ipsum is typically a corrupted version of De finibus bonorum et malorum, a 1st-century BC text by the Roman statesman and philosopher Cicero, with words altered, added, and removed to make it nonsensical and improper Latin. The first two words are the truncation of dolorem ipsum ("pain itself"). </p>
+            <p style="font-size: 8pt">Just kidding! Everything written previously is just a joke. By clicking the button below, you are legally handing your soul over to me. When your time comes, you are obliged to fullfill your legal duty and give your soul to me. However, in case you already signed off another privacy policy (and haven't read it), your soul probably already belongs to either <i>Microsoft</i>, <i>Apple</i> or <i>Meta</i>. If this is the case, you may not continue into the afterlife until a satisfactory resolution is met in court. The battle for your soul works similarly to the battle of divorced parents over who gets the child on the weekends. If a resolution is not met within 2 years from your passing, your soul will be split into even parts among it's owners, which may or may not include you. After this process, you may continue into the afterlife.</p>
+
+            <center>
+                <a href="index.html"><button>Accept</button></a>
+            </center>
 
             <!-- mmm, feet :P -->
             <center>
